--- a/angular2-services-assignment/src/index.html
+++ b/angular2-services-assignment/src/index.html
@@ -7,6 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="src/styles.css">
+  <script src="https://use.fontawesome.com/410af320e3.js"></script>
+  
+
 </head>
 <body>
   <app-root>Loading...</app-root>
